# imgui_template

./: .gitmodules  README.md  dependencies.cmake
commons/: decide_gl_glsl_versions.h  harry_plotter.cpp  harry_plotter.h  imgui_definitions.h  juancho_tools.cpp  juancho_tools.h  juangui_wrapper.cpp  juangui_wrapper.h  my_imgui_custom_definitions.h  my_imgui_custom_definitions.h.in  my_imgui_definitions.h
examples/ImCoppeliaSimCommander/: CMakeLists.txt  ImCoppeliaSimCommander.cpp
examples/basic_window/: CMakeLists.txt  basic_window.cpp  basic_window_wrapper.cpp  basic_window_wrapper.h
examples/imgui_demo/: CMakeLists.txt  imgui_demo.cpp  imgui_demo_wrapper.cpp  imgui_demo_wrapper.h
examples/implot_demo/: CMakeLists.txt  implot_demo.cpp  implot_demo_wrapper.cpp  implot_demo_wrapper.h
examples/minimal_example_imgui/: CMakeLists.txt  minimal_example_imgui.cpp  minimal_example_imgui_demo_wrapper.cpp  minimal_example_imgui_demo_wrapper.h
